--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
     <section>
-        <button id="mostrarData">Mostrar usuarios</button>
+        <button id="mostrarData">Mostra usuarios</button>
         <button id="ocultarData">Ocultar data</button>
 
         <article>
