--- a/index.html
+++ b/index.html
@@ -1,35 +1,264 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <title>¿Qué es una ONG y cómo funciona?</title>
 </head>
+
 <body>
-    
-
-    <section>
-        <button id="mostrarData">Mostra usuarios</button>
-        <button id="ocultarData">Ocultar data</button>
-
-        <article>
-            <div id="root">
-                <div class="header-table">
-                    <p>id</p>
-                    <p>name</p>
-                    <p>username</p>
-                    <p>email</p>
-                    <p>phone</p>
-                </div>
-                <div id="bodyTable" class="body-table">
-                    
-                </div>
+    <div class="container" id="firstInfo">
+        <nav class="container__nav" id="navigator">
+            <button class="nav__button" id="btnNav">Inicio</button>
+            <button class="nav__button" id="btnNavSecond">Menú</button>
+        </nav>
+        <main class="mainContainer">
+            <article class="mainContainer__article" id="article">
+                <header>Organización no gubernamental</header>
+                <section class="article__section" id="firstSection">
+                    <strong class="section__header" id="firstHeader">¿Qué es una ONG y cómo funciona?</strong>
+                    <p>
+                        Las entidades que se conocen bajo el término ONG llevan existiendo desde hace siglos, pero fue
+                        en el
+                        siglo
+                        XX cuando realmente empezaron a cobrar una importancia global.
+                        En este artículo te explicamos concretamente qué es una ONG y para qué sirve, los distintos
+                        tipos de
+                        ONG
+                        y
+                        las funciones que puede tener asociadas.
+                    </p>
+                </section>
+                <section class="article__section" id="secondSection">
+                    <strong class="section__header" id="secondHeader">¿Qué es una ONG?</strong>
+                    <p>
+                        Para saber qué significa una ONG, solamente tenemos que identificar lo que representan
+                        literalmente
+                        sus
+                        siglas: Organización No Gubernamental. Es decir, una entidad de iniciativa social que tiene
+                        fines
+                        humanitarios, que no depende de la administración pública y que no tiene afán lucrativo.
+                    </p>
+                </section>
+                <section class="article__section" id="thirdSection">
+                    <strong class="section__header" id="thirdHeader">Tipos de ONG</strong>
+                    <p>
+                        Si bien la definición de una ONG es bastante conocida, no tanto los diferentes tipos que hay de
+                        estas
+                        entidades. Por lo general se clasifican en base a su orientación y a su área de influencia.
+                        Según su orientación diferenciamos cuatro tipos de ONG:
+                        ONG de caridad: aquellas cuyas actividades se enfocan a apoyar a colectivos en vías de
+                        desarrollo,
+                        aportando
+                        herramientas para el autoabastecimiento para evitar su dependencia.
+                        ONG de servicios: aquellas que centran sus actividades en aprovisionar de salud, educación o
+                        planificación
+                        familiar, entre otros servicios.
+                        ONG participativas: aquellas que desarrollan proyectos de autoayuda en comunidades locales.
+                        ONG de defensa o empoderamiento: aquellas que sirven para impulsar un cambio en el sistema
+                        político-social o
+                        económico.
+                        Según su área de influencia diferenciamos otros cuatro tipos de ONG:
+                        ONG de carácter local: también conocidas como ONG de base comunitaria, ya que surgen por
+                        iniciativas
+                        en
+                        la
+                        misma comunidad.
+                        ONG ciudadanas: aquellas que actúan a nivel local abordando grandes áreas como toda una ciudad.
+                        ONG nacionales: aquellas cuyo ámbito de actuación abarca todo el territorio nacional.
+                        ONG internacionales: aquellas que actúan en proyectos localizados en varios países del mundo.
+                    </p>
+                </section>
+                <section class="article__section" id="fourthSection">
+                    <strong class="section__header" id="fourthHeader">Funciones de una ONG</strong>
+                    <p>
+                        Las funciones de una ONG serán diferentes en base a la tipología de entidad que se trate.
+                        Algunas de
+                        las
+                        más
+                        frecuentes son las siguientes:
+                        Concienciar a la sociedad de problemas sociales, humanitarios y medioambientales.
+                        Impulsar proyectos de transformación social.
+                        Motivar a las personas a que sean protagonistas de su propio desarrollo.
+                        Formar a la ciudadanía en el conocimiento de sus derechos.
+                        Complementar políticas públicas.
+                        Trabajar con honestidad, profesionalidad, compromiso y transparencia.
+                        Todas estas funciones (y muchas más) se pueden abordar con voluntariado, que son personas que
+                        colaboran
+                        para
+                        hacerlas realidad, contratando a profesionales y especialistas o bien combinando ambos perfiles.
+                        Por otro lado, no es lo mismo cómo funciona una ONG a nivel local que en proyectos de
+                        cooperación
+                        internacional, en los que puede contar con una sede u oficina en el territorio donde se solicita
+                        la
+                        ayuda de
+                        los más desfavorecidos o, si no ha actuado previamente en esa zona, necesitará desplazarse y
+                        hacerse
+                        de
+                        un
+                        material con el que no contaba hasta ahora.
+                        Voluntarios y niños explicando filtros
+                    </p>
+                </section>
+                <section class="article__section" id="fifthSection">
+                    <strong class="section__header" id="fifthHeader">¿Cuándo se debe recurrir a profesionales externos a
+                        la ONG?</strong>
+                    <p>
+                        Existen muchos territorios en el mundo que presentan distintas necesidades. Algunos de ellos
+                        están
+                        asolados
+                        por enfermedades contagiosas, exigiendo cuidados médicos especiales, desde vacunación a
+                        operaciones
+                        quirúrgicas.
+                        Otros lugares tienen problemas para abastecerse de alimento y agua, requiriendo en muchos casos
+                        el
+                        envío
+                        de
+                        toneladas de alimentos que cubran la necesidad de miles de familias.
+                        En ocasiones, encontramos una falta de un sistema educativo. Cuando la población es analfabeta,
+                        tiene
+                        más
+                        dificultades para comprender tareas básicas, como puede ser la agricultura, que puede generar
+                        beneficios
+                        en
+                        su alimentación y su economía familiar.
+                        El desconocimiento es lo que impide a muchos pueblos seguir avanzando y salir del círculo de la
+                        pobreza.
+                        Enseñar y buscar a los profesionales
+                        oportunos que lleven a cabo los proyectos de una ONG implica un esfuerzo y, un sueldo que
+                        cubrir.
+                        Las guerras son otras de las cuestiones por las que muchas regiones del mundo se ven azotadas.
+                        Estas
+                        han
+                        sido consecuencia de hambre y epidemias. En zonas de conflicto, muchos niños y niñas han quedado
+                        huérfanos;
+                        las ONG en estos casos intervienen para que puedan acceder a sus derechos fundamentales: tener
+                        una
+                        vivienda,
+                        asistir a la escuela, gozar de buena salud…
+                    </p>
+                </section>
+                <section class="article__section" id="sexthSection">
+                    <strong class="section__header" id="sexthHeader">La importancia de la función social de una ONG
+                    </strong>
+                    <p>
+                        Por todo esto, una organización de esta índole requiere de una estrategia dirigida por un órgano
+                        interno
+                        que
+                        lleve a cabo todas sus metas de manera transparente: desde administradores, hasta dirigentes y
+                        medios de
+                        transporte, existe un conglomerado de gente trabajando para una ONG.
+                        En ocasiones, sobre todo cuando surgen catástrofes imprevistas, como terremotos, tsunamis o
+                        ataques
+                        terroristas, las ONG han de recurrir al contrato de personal humanitario que cumpla con la labor
+                        que
+                        se
+                        pretende. De este modo, se pone en marcha toda la organización con el fin de analizar los
+                        métodos
+                        para
+                        suplir las necesidades de los afectados de la zona.
+                        Gente como tú que, cuando oye algunos de estos sucesos, busca una ONG determinada para dar su
+                        donativo,
+                        supone el primer paso para la puesta en acción.
+                        En caso de llevar alimentos, hay que disponer de los medios móviles disponibles o alquilar
+                        nuevos
+                        que
+                        lleven
+                        la ayuda humanitaria donde se necesita.
+                        Siempre vas a tener el derecho de saber dónde va la donación que decidas aportar. Es por eso que
+                        una
+                        ONG
+                        debe hablarte siempre desde la transparencia, ofreciéndote su forma de trabajar y sus estatutos,
+                        conforme a
+                        su actuación.
+                        Recuerda que toda ayuda que puedas ofrecer es fundamental para que personas como tú tengan una
+                        vida
+                        digna.
+                        Para que se cumpla con todo esto, deben trabajar profesionales y voluntariado, que suelen
+                        arriesgarse en
+                        ocasiones por el bienestar del prójimo. Esperamos que te haya quedado claro qué es una ONG y
+                        cómo
+                        funciona,
+                        y sobre toda la importancia de la función social de estas organizaciones para ayudar a crear un
+                        mundo
+                        mejor.
+                    </p>
+                </section>
+            </article>
+            <aside class="mainContainer__aside" id="aside">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zGcUKpH_YEo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <a href="https://www.youtube.com/watch?v=zGcUKpH_YEo&t=1s" target="_blank">Cómo se FINANCIA una ONG 💲
+                    [te sorprenderas!] - (fundación o corporación)</a>
+                <p>Las ONG deben cumplir con ciertos parámetros legales para ser reconocidas, y en el caso de Argentina
+                    las
+                    ONG u organizaciones filantrópicas para fines de bien común y sin finalidad de lucro, pueden
+                    constituirse
+                    de dos formas, la primera como una asociación civil sin fines de lucro y la segunda como una
+                    fundación.
+                    Organizaciones No Gubernamentales de Argentina
+                </p>
+                <ul>
+                    <li>Amnistía Internacional Sección Argentina</li>
+                    <li>Asamblea Permanente por los Derechos Humanos</li>
+                    <li>Asamblea Permanente por los Derechos Humanos La Plata</li>
+                    <li>Asociación Abuelas de Plaza de Mayo</li>
+                    <li>Asociación de Ex-Detenidos/Desaparecidos</li>
+                    <li>Asociación Madres de Plaza de Mayo</li>
+                </ul>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5He-hQM9Ca9ASy-jger0ejC7K3C7_EiUesQ&usqp=CAU"
+                    alt="Día Mundial de las ONG">
+                <p>Aunque cualquier organización privada es, en sentido estricto, una organización no gubernamental, el
+                    término ONG, u oenegé, se utiliza
+                    para identificar a organizaciones que no son parte de las esferas gubernamentales o empresas, cuyo
+                    fin fundamental es el bien social.<br>
+                    Etica<br>
+                    Una ONG debería ser honesta y veraz en sus acuerdos, con sus donantes, beneficiarios de sus
+                    proyectos, el personal a cargo, los miembros, las organizaciones
+                    asociadas, el gobierno, y el público en general, y debería respetar las leyes de cualquier
+                    jurisdicción en la cual actúe.<br>
+                    Dominio<br>
+                    Los dominios . ONG están referidos a las Organizaciones no Gubernamentales que se dedican, sin ánimo
+                    de lucro, a organizar, promover y facilitar ayuda en las
+                    zonas necesitadas del mundo. Los dominios . ong están restringidos a las propias ONGs y se requiere
+                    una verificación ya sea de ámbito mundial como local.<br>
+                </p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk1xGwJ9sQN-J6szCTUkx69EhBanVRgAlUbw&usqp=CAU" alt="Illustration">
+            </aside>
+        </main>
+        <footer class="container__footer">
+            <div class="footerMoreInfo">
+                Seguir leyendo mas sobre temas relacionados:<br>
+                <ul>
+                    <li><a href="https://www.tiempoar.com.ar/politica/una-ong-ligada-a-bullrich-busca-reabrir-la-causa-en-la-que-fue-sobreseida-cristina/"
+                            target="_blank">
+                            Una ONG ligada a Bullrich busca reabrir la causa en la que fue sobreseída Cristina
+                        </a><br>
+                    </li>
+                    <li>
+                        <a href="https://www.losandes.com.ar/por-las-redes/luciano-tiene-una-ong-gano-3-millones-en-los-8-escalones-y-anuncio-que-tambien-ayudara-a-una-participante/"
+                            target="_blank">
+                            Luciano tiene una ONG, ganó 3 millones en Los 8 escalones y anunció que también ayudará a
+                            una
+                            participante
+                        </a><br>
+                    </li>
+                    <li><a href="https://www.argentina.gob.ar/sinagir/institucional/ong/registro" target="_blank">
+                            Registro de ONG/OSC - Argentina.gob.ar
+                        </a><br>
+                    </li>
+                </ul>
             </div>
-        </article>
-    </section>
-
-    <script src="Auto.js"></script>
+        </footer>
+    </div>
+    <script src="event.js"></script>
 </body>
+
 </html>
